# Ros-AMR-Mobile-Robot

./: .gitignore  COLCON_IGNORE  README.md  changes.md
amr_fe01/: README.md  package.xml  setup.cfg  setup.py
amr_fe01/amr_fe01/: vision.py
amr_fe01/config/: nav2_params.yaml  ros_gz_bridge_gazebo.yaml  sync_slam_toolbox_cfg.yaml
amr_fe01/launch/: nav2.launch.py  slam.launch.py
amr_fe01/maps/: world_map.yaml
amr_fe01/urdf/: amr_fe01.xacro
amr_fe01/world/: world.sdf
cad/f3z/: readme.md  real_world - Shortcut.lnk
cad/f3z/real_world/layers/: amr_fe01_layer_3.f3d
supermarketbot/: .gitignore  README.md  package.xml  setup.cfg  setup.py
supermarketbot/config/: async_slam_toolbox_cfg.yaml  nav2_params.yaml  ros_gz_bridge_gazebo.yaml  slam_toolbox_cfg.yaml  sync_slam_toolbox_cfg.yaml
supermarketbot/launch/: explore.launch.py  nav2.launch.py  slam.launch.py  slam_headless.launch.py
supermarketbot/maps/: supermarket_map.pgm  supermarket_map.yaml  world_map.pgm  world_map.yaml
supermarketbot/meshes/: chassis_l1.stl  chassis_l2.stl  chassis_l3.stl  lidar_base_link.stl  lidar_scanner_link.stl  room.dae  room.stl  wheel.stl
supermarketbot/rviz/: slam_cfg.rviz
supermarketbot/scripts/: save_map.sh
supermarketbot/supermarketbot/: auto_explorer.py  product_locator.py  vision.py
supermarketbot/urdf/: supermarketbot.xacro
supermarketbot/world/: world.sdf
