<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>supermarketbot</name>
  <version>0.0.1</version>
<description>Autonomous supermarket assistant robot — ROS 2 simulation package for indoor product navigation and customer interaction</description>
  <maintainer email="chiragtaneja.work@gmail.com">Chirag Taneja</maintainer>
  <license>MIT</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
